[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wattweight"
version = "0.1.0"
description = "A Python project for energy management"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Kristof Marien", email = "krmarien@gmail.com"}
]
keywords = ["energy", "wattweight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlmodel>=0.0.14",
    "alembic>=1.13",
    "tabulate>=0.9.0",
    "pandas",
]

[project.scripts]
wattweight = "wattweight.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pre-commit",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "types-tabulate",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/krmarien/wattweight"
Repository = "https://github.com/krmarien/wattweight.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wattweight = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
exclude = "venv|migration|tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src/wattweight --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
omit = [
    "src/wattweight/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

